--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#output{
+#output {
   color: green;
   font-weight: 1000;
 }
@@ -39,7 +39,7 @@ body {
   font-family: var(--font-poppins), sans-serif; /* Use Poppins as default */
 }
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   font-family: var(--font-geist-sans), sans-serif; /* Apply Geist font to headings */
 }
 
